# jotter

./: .gitignore  .oxlintrc.json  .prettierignore  .stylelintrc.json  AGENTS.md  CLAUDE.md  LICENSE  MIGRATION_SUMMARY.md  README.md  UI.md  architecture.md  components.json  eslint.config.js  package.json  pnpm-lock.yaml  proposed_architecture.md  svelte.config.js  tailwind.config.ts  tsconfig.json  ux_architecture_audit.md  vite.config.ts
carbide/: Phase_3.md  Phase_6.md  TODO.md  scratch_highvalue.md
docs/: architecture.md
scripts/: clear.sh  lint_layering_rules.mjs  release.sh
src/: app.css  app.d.ts  (+3 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assets_service.rs  constants.rs  git_service.rs  index_service.rs  lib.rs  main.rs  notes_service.rs  search_db.rs  settings_service.rs  storage.rs  vault_service.rs  vault_settings_service.rs  watcher_service.rs
src-tauri/src/app/: mod.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/git/: service.rs
src-tauri/src/features/notes/: service.rs
src-tauri/src/features/search/: db.rs  link_parser.rs  mod.rs  model.rs  service.rs
src-tauri/src/features/settings/: service.rs
src-tauri/src/features/vault/: service.rs
src-tauri/src/features/vault_settings/: service.rs
src-tauri/src/features/watcher/: service.rs
src-tauri/src/shared/: constants.rs  storage.rs
src-tauri/src/tests/: mod.rs
src-tauri/tests/: link_rewrite.rs  notes_service_safety.rs  search_db_behavior.rs  vault_settings_service_parse.rs
(+868 files in other folders)
