[package]
name = "imdown"
version = "0.1.0"
description = "Local-first markdown vault"
authors = ["altamkhan"]
edition = "2021"

[lib]
name = "imdown_lib"
path = "src/lib.rs"

[[bin]]
name = "imdown"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.95"
blake3 = "1.5.5"
mime_guess = "2.0.5"
notify = "7.0.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tantivy = "0.22.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1.43.0", features = ["fs", "rt-multi-thread", "sync"] }
walkdir = "2.5.0"
